Add typographical single quotes where required

--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -36,7 +36,7 @@ The MHCLG Way guides teams to build and operate brilliant, cost-effective digita
 
 It documents the specific technology, tools and processes that Ministry of Housing, Communities and Local Government (MHCLG) teams use.
 
-It's not intended as guidance for anyone working outside MHCLG - you'll find that in the [Service Manual](https://www.gov.uk/service-manual).
+It’s not intended as guidance for anyone working outside MHCLG - you’ll find that in the [Service Manual](https://www.gov.uk/service-manual).
 
 ## About The MHCLG Way
 
@@ -80,14 +80,14 @@ When you create a new Markdown file follow this pattern and then make a pull req
 
 ```markdown
 ---
-title: Thing you're writing a standard about
+title: Thing you’l writing a standard about
 last_reviewed_on: yyyy-mm-dd
 review_in: 6 months
 ---
 
 # <%%= current_page.data.title %>
 
-Introduction of a couple of paragraphs to explain why the thing you're
+Introduction of a couple of paragraphs to explain why the thing you’l
 writing a standard about is important.
 
 ## User needs
