--- a/source/manuals/code-review-guidelines.html.md.erb
+++ b/source/manuals/code-review-guidelines.html.md.erb
@@ -26,7 +26,7 @@ You should:
 * only approve pull requests you fully understand
 * give appropriate positive feedback
 * flag up major issues quickly, and in person if necessary
-* ask for clarification on anything that's not clear
+* ask for clarification on anything that’s not clear
 
 You should not:
 
@@ -84,7 +84,7 @@ The Service Manual contains guidance about [deploying software][].
 
 ## Documentation
 
-Before you approve a PR, you should consider if it affects any existing documentation. You should make sure the PR's documentation is clear and unambiguous, and in the right place.
+Before you approve a PR, you should consider if it affects any existing documentation. You should make sure the PR’s documentation is clear and unambiguous, and in the right place.
 
 If you want to learn more about writing clearly for technical audiences you can contact [#technical-writing](https://ukgovernmentdigital.slack.com/archives/C1ZM2T0SG) on UK Government Digital Slack Workspace.
 
