--- a/source/manuals/licensing.html.md.erb
+++ b/source/manuals/licensing.html.md.erb
@@ -35,12 +35,12 @@ _MIT License_.
 Each repository should include a licence file. This should be called `LICENCE`
 or `LICENCE.md`.
 
-GitHub's guidance for [including an open source licence in your
+GitHub’s guidance for [including an open source licence in your
 repository][gh-licence-guidance] uses the US English spelling of _license_, but
 will still show licence details for the British English spelling.
 
-You should specify the licence and link to it in the repository's
-[README][readme]. It's typical to include this information at the very end of a
+You should specify the licence and link to it in the repository’s
+[README][readme]. It’s typical to include this information at the very end of a
 README under a ‘Licence’ heading.
 
 ### Use MIT
