--- a/source/manuals/style-guides/python.html.md.erb
+++ b/source/manuals/style-guides/python.html.md.erb
@@ -22,9 +22,9 @@ and consistent, within, and across, projects at MHCLG.
 
 This manual advises the use of [`uv`][uv] to manage Python projects. Read the linked documentation for more information. Using `uv` consistently will make it easier for developers in MHCLG to move between different teams by providing a similar way of managing the project and its dependencies.
 
-Once installed, the `uv` command lets you manage your installed Python versions, your virtual environments, and your project's dependencies.
+Once installed, the `uv` command lets you manage your installed Python versions, your virtual environments, and your project’s dependencies.
 
-`uv python install <version>` to explicitly install a version of Python. However, one of `uv`'s stated benefits is that it will generally do everything for you. You should not need to install Python manually, or manage your virtual environments manually.
+`uv python install <version>` to explicitly install a version of Python. However, one of `uv`’s stated benefits is that it will generally do everything for you. You should not need to install Python manually, or manage your virtual environments manually.
 
 Any existing Python projects in MHCLG that do not use `uv` should aim to move over when it is convenient.
 
