--- a/source/manuals/style-guides/ruby.html.md.erb
+++ b/source/manuals/style-guides/ruby.html.md.erb
@@ -36,7 +36,7 @@ unlike the default WEBrick.
 
 For testing, the [RSpec] framework is the conventional and preferred choice.
 RSpec provides an expressive syntax that lends itself to producing readable
-tests. For testing functionality from a user's perspective it is preferred
+tests. For testing functionality from a user’s perspective it is preferred
 to implement tests in RSpec rather than adopt an abstraction such as [Cucumber],
 this is due to us finding it easier to maintain tests where the definition
 and implementation are in the same file.
