--- a/source/standards/accounts-with-third-parties.html.md.erb
+++ b/source/standards/accounts-with-third-parties.html.md.erb
@@ -32,7 +32,7 @@ With team or organisation-level accounts, where possible you should:
 
 * create separate accounts for each individual, rather than share credentials
 * use a single-sign-on provider rather than create an account with a separate username and password - if possible use Microsoft Entra ID as it’s a core part of the MHCLG leaver process, which means that access to linked third-party services will be revoked automatically when someone leaves
-* make sure that you have a documented process for removing individual's access when they leave MHCLG
+* make sure that you have a documented process for removing individual’s access when they leave MHCLG
 
 ### Managing accounts with individual-level access
 
