--- a/source/standards/architecture-decisions.html.md.erb
+++ b/source/standards/architecture-decisions.html.md.erb
@@ -23,7 +23,7 @@ there were external reasons behind that decision that need to be factored in.
 
 Architecture decisions should be stored in version control so there is a
 record of what was changed, who by, and when. Decisions that affect a specific
-application should be in that application's code repository. You may also want
+application should be in that application’s code repository. You may also want
 to store larger-scale decisions for services that span multiple applications/repositories
 in a central documentation repository.
 
@@ -44,7 +44,7 @@ about how and why the ADR process should be adopted.
 
 ## What an ADR is not
 
-An ADR isn't a complete description of a software system or architecture.
+An ADR isn’t a complete description of a software system or architecture.
 
 Some teams use requests for comment (RFCs), wikis, team manuals, or other collaboration tools to document
 their architecture, and these should be updated whenever a new ADR is accepted.
