--- a/source/standards/disaster-recovery.html.md.erb
+++ b/source/standards/disaster-recovery.html.md.erb
@@ -75,7 +75,7 @@ Your disaster recovery strategy will depend on your specific service requirement
 
 ### Agree your RPOs and RTOs with risk and service owners
 
-Make sure you discuss and agree your RPOs and RTOs with risk and service owners. Not only is their expertise key to decision making, but it's vital they understand what will happen and why in the event of a disaster.
+Make sure you discuss and agree your RPOs and RTOs with risk and service owners. Not only is their expertise key to decision making, but it’s vital they understand what will happen and why in the event of a disaster.
 
 ## Test your disaster recovery plans
 
