--- a/source/standards/dns-hosting.html.md.erb
+++ b/source/standards/dns-hosting.html.md.erb
@@ -6,7 +6,7 @@ review_in: 12 months
 
 # <%= current_page.data.title %>
 
-To ensure users can connect to your service, you'll need accurate Domain Name System (DNS) records and a DNS provider to supply your DNS nameservers.
+To ensure users can connect to your service, you’ll need accurate Domain Name System (DNS) records and a DNS provider to supply your DNS nameservers.
 
 DNS is managed centrally by the [Cloud Platforms team](https://mhclg.sharepoint.com.mcas.ms/sites/CloudPlatforms/SitePages/What-do-we-offer-.aspx) and you will need approval from the [Technical Design Authority (TDA)](https://mhclg.sharepoint.com.mcas.ms/sites/TechnicalDesignAuthorityPublic) for any new domains and nameserver delegation. You can make a request on [ServiceNow](https://mhclg.service-now.com.mcas.ms/sp?id=sc_category) using the general request form.
 
