--- a/source/standards/how-to-do-penetration-tests.html.md.erb
+++ b/source/standards/how-to-do-penetration-tests.html.md.erb
@@ -46,11 +46,12 @@ Before testing, you should define and agree:
  
 ## Schedule a test
 
-If you plan to test any application contact the [Cyber Security Team] by raising a ticket on ServiceNow, search for a 'cyber assurance' and fill in the new requirement form. This must be done 3 months in advance so they can organise the penetration test with the contractor.
+If you plan to test any application contact the [Cyber Security Team] by raising a ticket on ServiceNow, search for a ‘cyber assurance’ and fill in the new requirement form. This must be done 3 months in advance so they can organise the penetration test with the contractor.
 
-When contacting the [Cyber Security Team] to perform a test, ask them to send you the 'Security Domain Alignment' document to help scope your pen test.
+When contacting the [Cyber Security Team] to perform a test, ask them to send you the ‘Security Domain Alignment’ document to help scope your pen test.
 You will need to enter the information listed in the [scope your test section](#scope-your-test) and the [prepare for your test section](#prepare-for-your-test) into this document, the scope can then be agreed and signed off by both parties.
-As with an external company, you should give at least 3 months' notice to make sure you can schedule the test at a time that suits project timelines.
+As with an external company, you should give at least 3 months’
+notice to make sure you can schedule the test at a time that suits project timelines.
 
 ## Prepare for your test
 
