--- a/source/standards/pair-programming.html.md.erb
+++ b/source/standards/pair-programming.html.md.erb
@@ -55,7 +55,7 @@ Remember that developers are people and as such might be unable to pair on any g
 
 ### Communicate effectively
 Pair programming is both a social skill and a technological skill.
-It works most effectively in an environment where the pair respect each other's skills and needs, and communicate with openness, empathy, and honesty.
+It works most effectively in an environment where the pair respect each other’s skills and needs, and communicate with openness, empathy, and honesty.
 People in teams that have embraced concepts like [psychological safety](https://en.wikipedia.org/wiki/Psychological_safety) and [non-violent communication](https://www.cnvc.org/) are likely to be well-equipped for pair programming.
 
 ## Reviewing code as a pair
@@ -73,7 +73,7 @@ However, teams should adjust their policy on this approach depending on the risk
 
 ## Pair programming and version control
 
-Almost all version control systems, including Git, are oriented around a single-author-per-change model. This doesn't completely align with collaborative development practices.
+Almost all version control systems, including Git, are oriented around a single-author-per-change model. This doesn’t completely align with collaborative development practices.
 
 A convention has emerged, and is supported by GitHub, to use the [`Co-authored-by`](https://docs.github.com/en/pull-requests/committing-changes-to-your-project/creating-and-editing-commits/creating-a-commit-with-multiple-authors) trailer on commit messages to flag that multiple people have worked on a change.
 
