--- a/source/standards/pull-requests.html.md.erb
+++ b/source/standards/pull-requests.html.md.erb
@@ -5,7 +5,7 @@ review_in: 12 months
 ---
 # <%= current_page.data.title %>
 
-Pull requests (PRs) let you tell others about changes you've pushed to a branch in a repository on GitHub.
+Pull requests (PRs) let you tell others about changes you’ve pushed to a branch in a repository on GitHub.
 
 ## Why might you use pull requests?
 
@@ -48,11 +48,11 @@ As such, the canonical description of changes should be in the commit messages. 
 
 ### Reviewing a request
 
-Taking time to properly review a PR is as important as making the change itself, and it is crucial that we show compassion when critiquing someone else's work.
+Taking time to properly review a PR is as important as making the change itself, and it is crucial that we show compassion when critiquing someone else’s work.
 
 April Wensel has a talk about [Compassionate-Yet-Candid Code Reviews](https://www.slideshare.net/AprilWensel/compassionate-yet-candid-code-reviews).
 
-It suggests 3 key questions to ask ourselves when reviewing or commenting on someone else's work:
+It suggests 3 key questions to ask ourselves when reviewing or commenting on someone else’s work:
 
 - Is it true?
 - Is it necessary?
