--- a/source/standards/source-code/use-github.html.md.erb
+++ b/source/standards/source-code/use-github.html.md.erb
@@ -19,7 +19,7 @@ Accounts not connected to a valid email address will be removed from `communitie
 
 You must also set up two-factor authentication on your account.
 
-To join `communitiesuk` ask your tech lead or technical architect to invite you. Make sure you've connected your MHCLG
+To join `communitiesuk` ask your tech lead or technical architect to invite you. Make sure you’ve connected your MHCLG
 email address to your account first, otherwise your account will be removed.
 
 ## Managing repositories
@@ -94,7 +94,7 @@ Actions and workflows can be powerful, so take care to follow best security prac
 
 Ensure the repository permissions follow [the principle of least privilege](/standards/principle-least-access.html) by:
 
-- disabling Actions entirely on repositories that do not use it (this will hide the 'Actions' tab from the repository menu)
+- disabling Actions entirely on repositories that do not use it (this will hide the ‘Actions’ tab from the repository menu)
 - setting workflow permissions to read-only by default
 - setting [granular permissions in the workflow YAML](https://docs.github.com/actions/reference/authentication-in-a-workflow#modifying-the-permissions-for-the-github_token) where appropriate
 - [using environments to restrict access to secrets](https://docs.github.com/en/actions/deployment/targeting-different-environments/using-environments-for-deployment#environment-secrets)
@@ -117,7 +117,7 @@ Third-party actions should only be used if:
 - You have pinned the specific version in your workflow and in the repository settings, using a Git commit SHA
 - The third-party action is actively maintained, well-documented and tested ([follow the guidance on third party dependencies](/standards/tracking-dependencies.html)).
 
-You can enforce this in the settings for Actions by choosing ['Allow select actions'](https://docs.github.com/en/repositories/managing-your-repositorys-settings-and-features/enabling-features-for-your-repository/managing-github-actions-settings-for-a-repository#allowing-specific-actions-to-run) and then 'Allow actions created by GitHub' and 'Allow Marketplace actions by verified creators' as required.
+You can enforce this in the settings for Actions by choosing [‘Allow select actions’](https://docs.github.com/en/repositories/managing-your-repositorys-settings-and-features/enabling-features-for-your-repository/managing-github-actions-settings-for-a-repository#allowing-specific-actions-to-run) and then ‘Allow actions created by GitHub’ and ‘Allow Marketplace actions by verified creators’ as required.
 
 Note that for public repositories, the output of workflow runs is visible to everyone. Do not use workflows if this
 output could be considered sensitive.
@@ -136,7 +136,7 @@ not everyone can have this.
 If you are not already an enterprise admin or have a support entitlement on your GitHub user you will first need to ask
 one of the enterprise admins to be given permission to access the support portal.
 
-Once you've been given permission, you can view and raise support requests using GitHub’s [support portal].
+Once you’ve been given permission, you can view and raise support requests using GitHub’s [support portal].
 
 You should use your `@communities.gov.uk` email during the sign up process to ensure your ticket is prioritised.
 You should also state that you are part of `communitiesuk` organisation in your request.
