--- a/source/standards/source-code/working-with-git.html.md.erb
+++ b/source/standards/source-code/working-with-git.html.md.erb
@@ -59,7 +59,7 @@ developers on your project. This includes:
   made
 
 Capturing context around a change allows people to understand why a particular
-implementation decision was made, much like an [architecture decision record](https://cognitect.com/blog/2011/11/15/documenting-architecture-decisions). We're
+implementation decision was made, much like an [architecture decision record](https://cognitect.com/blog/2011/11/15/documenting-architecture-decisions). We’l
 being kinder to our future selves.
 
 #### Recommended blog posts on commit messages
@@ -176,7 +176,7 @@ Force pushing in git is a subject that attracts all kinds of religious
 battles. This advice is not about the merits of force pushing. This is about how
 to use `git push -f` if and when you do use it.
 
-Let’s say you're working on a branch, 'foobar', and you decide to force push
+Let’s say you’l working on a branch, ‘foobar’, and you decide to force push
 to the remote. So you do this:
 
 ```
