--- a/source/standards/technical-debt.html.md.erb
+++ b/source/standards/technical-debt.html.md.erb
@@ -72,8 +72,8 @@ should review the impact.
 
 ## Process
 
-Items of Technical Debt should be recorded in your product's Jira project. The product's technical leadership will triage these on a regular basis, agree the assigned ratings and add them to the correct category. They should also review each item every 3 months.
+Items of Technical Debt should be recorded in your product’s Jira project. The product’s technical leadership will triage these on a regular basis, agree the assigned ratings and add them to the correct category. They should also review each item every 3 months.
 
-The product's technical leadership (for example, Technical Architects, Technical Leads, Lead Developers) should use these lists during conversations with Product and Delivery Managers when prioritising work. Technical debt existing in Jira doesn’t necessarily mean it will be paid down at any point, only that MHCLG is conscious of its existence and will take it into account in product decisions.
+The product’s technical leadership (for example, Technical Architects, Technical Leads, Lead Developers) should use these lists during conversations with Product and Delivery Managers when prioritising work. Technical debt existing in Jira doesn’t necessarily mean it will be paid down at any point, only that MHCLG is conscious of its existence and will take it into account in product decisions.
 
 Tracking debt as it gets created will follow the same process, with a link to a Jira ticket on a team’s backlog for the story that created it. The debt review process doesn’t make decisions on whether the creation of the debt is the correct thing to do, that decision stays with the product team.
