--- a/source/standards/understanding-risks.html.md.erb
+++ b/source/standards/understanding-risks.html.md.erb
@@ -8,7 +8,7 @@ review_in: 6 months
 
 When you build, maintain or change your service, you must have a clear understanding of any associated risks because they will impact your service design and affect your users.
 
-You should work with [MHCLG Cyber Security team] to design appropriate solutions for your service's risks.
+You should work with [MHCLG Cyber Security team] to design appropriate solutions for your service’s risks.
 
 The Service Manual has some recommendations which can reduce risk to your service, for example, how to:
 
@@ -26,7 +26,7 @@ MHCLG Cyber Security Team can help you carry out threat modelling, to help you:
 * Understand threats that are unique to your service, helping you to adopt security conscious behaviours during its design, development and operation
 * Focus mitigation efforts on the threats that matter – that is, threats that pose the greatest risk to the normal operation of your service
 * Ensure the right security controls are in place to match the threats your service faces
-* Adopt secure by design approach to your service throughout the service's lifecycle
+* Adopt secure by design approach to your service throughout the service’s lifecycle
 
 The team can also advise you on how threat model efficiently, should you decide to carry it out yourself or through a third party. 
 
