--- a/source/standards/user-support.html.md.erb
+++ b/source/standards/user-support.html.md.erb
@@ -19,7 +19,7 @@ MHCLG teams provide support in 3 groups, known as ‘lines’, for each product.
 
 1st line support provide resolution for basic user enquiries and triage frequent, repeatable incidents. For example, issues signing in.
 
-Several teams leverage an ongoing contract for [XBP Europe's contact centre](https://xbpeurope.com/solutions/contact-centre-services/) to handle phone calls and to triage incoming JIRA Service Desk tickets.
+Several teams leverage an ongoing contract for [XBP Europe’s contact centre](https://xbpeurope.com/solutions/contact-centre-services/) to handle phone calls and to triage incoming JIRA Service Desk tickets.
 
 ### 2nd line technical support
 
