--- a/source/standards/secrets-auditing.html.md.erb
+++ b/source/standards/secrets-auditing.html.md.erb
@@ -38,10 +38,10 @@ Your team should:
 - create alerts for use cases of access which may indicate a security breach
   - this should include use of high risk secrets, such as break-glass accounts or root
 - look for any opportunities to replace secrets with ephemeral tokens, such as moving from hard coded AWS secrets in GitHub Actions to using OpenID Connect.
-- consider using [Github's Secret Scanning] features, as well as using their [Partner Program] features
+- consider using [Github’s Secret Scanning] features, as well as using their [Partner Program] features
 - consider whether your use of secrets can be reduced by relying on e.g. automated CI/CD processes (such as Terraform, etc.)
 
 You should be conscious of the impacts of automated secrets rotation on service users. There may also be legal/contractual obligations to consider if you are changing how you manage user secrets.
 
-[Github's Secret Scanning]: https://docs.github.com/en/code-security/secret-scanning/about-secret-scanning
+[Github’s Secret Scanning]: https://docs.github.com/en/code-security/secret-scanning/about-secret-scanning
 [Partner Program]: https://docs.github.com/en/code-security/secret-scanning/secret-scanning-partner-program
