--- a/source/standards/sending-email.html.md.erb
+++ b/source/standards/sending-email.html.md.erb
@@ -8,6 +8,6 @@ review_in: 6 months
 
 Use [GOV.UK Notify](https://www.notifications.service.gov.uk/) when sending notifications to users from a MHCLG service, for example password resets and confirmation emails.
 
-There's a [complete feature list](https://www.notifications.service.gov.uk/features) available of what you can do with GOV.UK Notify, and you can also register for [a Notify account](https://www.notifications.service.gov.uk/register) here.
+There’s a [complete feature list](https://www.notifications.service.gov.uk/features) available of what you can do with GOV.UK Notify, and you can also register for [a Notify account](https://www.notifications.service.gov.uk/register) here.
 
 The Service Manual has further information related to [sending emails from your service domain](https://www.gov.uk/service-manual/technology/how-to-email-your-users).
