Update links for live site and fix some typos
Some idiot (me) earlier did a replace of 're with ’l instead of ’re, so fixing those as well as the links.

--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -80,7 +80,7 @@ When you create a new Markdown file follow this pattern and then make a pull req
 
 ```markdown
 ---
-title: Thing you’l writing a standard about
+title: Thing you’re writing a standard about
 last_reviewed_on: yyyy-mm-dd
 review_in: 12 months
 ---
