--- a/source/standards/naming-software-products.html.md.erb
+++ b/source/standards/naming-software-products.html.md.erb
@@ -12,7 +12,7 @@ Read this guide when you need to name components for your software product, for 
 
 Avoid using puns, acronyms or branding for names as this makes it difficult for others to understand what it does.
 
-Make sure you use the same name consistently whenever you’l referring to the same product. For example the name of the Delta application’s GitHub repository is [communitiesuk/delta](https://github.com/communitiesuk/delta).
+Make sure you use the same name consistently whenever you’re referring to the same product. For example the name of the Delta application’s GitHub repository is [communitiesuk/delta](https://github.com/communitiesuk/delta).
 
 These MHCLG product names clearly communicate their purpose:
 
