--- a/source/standards/threat-modelling.html.md.erb
+++ b/source/standards/threat-modelling.html.md.erb
@@ -171,7 +171,7 @@ Here is a fun, alternative look at the
 STRIDE is a model of threats developed by Microsoft.
 
 It’s a helpful tool for thinking about different potential attacks or
-vulnerabilities. If you’l finding it hard coming up with potential
+vulnerabilities. If you’re finding it hard coming up with potential
 attacks, you can use STRIDE to help stimulate ideas.
 
 Note that STRIDE is *not* useful as a taxonomy.  Some attacks don’t
