--- a/source/standards/pair-programming.html.md.erb
+++ b/source/standards/pair-programming.html.md.erb
@@ -92,4 +92,4 @@ You should use your work email address in the `Co-authored-by` trailer.
 
 ## Further reading
 
-- Code review guidelines in the [MHCLG Way](https://friendly-parakeet-63jl6v6.pages.github.io/standards/pull-requests.html#reviewing-a-request)
+- Code review guidelines in the [MHCLG Way](https://communitiesuk.github.io/mhclg-way/standards/pull-requests.html#reviewing-a-request)
